# ChessAI

./: .gitignore  README.md  chess_ai.py  chess_config.yaml  network_test.py  pyproject.toml  test_env.py  test_neural.py  train_neural.py
chess_ai/: __init__.py  environment.py
chess_ai/ai/: __init__.py  base_ai.py  global_ai.py
chess_ai/ai/custom_ai/: custom.py  custom_ai.py
chess_ai/ai/neural_network/: neural_ai.py  neural_env.py  test_test_neural.py  train_neural.py
chess_ai/ai/neural_network/gym_env/envs/: chess_env.py
chess_ai/ai/policy_network/: create_data.py  create_network.py  data.py  network.py  policy_network.py
chess_ai/ai/policy_network/scripts/: 1_create_data.py  2_create_network.py  3_train_network.py  4_test_predict.py
chess_ai/ai/random/: random_ai.py
chess_ai/ai/rl_network/gym_env/envs/: grid_world.py
chess_ai/ai/stockfish/: stock_ai.py
chess_ai/chess_logic/: __init__.py  chess_base_moves.py  chess_board.py  chess_castle.py  chess_check.py  chess_enpassant.py  chess_history.py  chess_move.py  chess_moves.py  chess_piece.py  chess_promotion.py  chess_score.py  chess_state.py  chess_utils.py  global_chess.py
chess_ai/io/: events.py  global_io.py  global_state.py  keyboard_events.py  mouse_events.py
chess_ai/minimax/: __init__.py  minimax.py  minimax_ab.py
chess_ai/network/: __init__.py  global_network.py
chess_ai/sounds/: global_sound.py
chess_ai/visuals/: chess_piece.py  draw_shapes.py  draw_text.py  global_colors.py  global_visual.py  images.py
tests/: timings.py
